--- a/syoukai/index.html
+++ b/syoukai/index.html
@@ -50,7 +50,7 @@
 <body>
     <div class="container">
         <h1>自己紹介</h1>
-        <img src="https://via.placeholder.com/150" alt="プロフィール写真" class="profile-picture">
+        <img src="EwWE7NTUcAMdphZ.jpg" alt="プロフィール写真" class="profile-picture">
         <p>こんにちは！私の名前はcoffee0814です。ウェブ開発とデザインが大好きで、趣味はプログラミング、読書、そして旅行です。</p>
         <p>現在は、フロントエンド開発に力を入れており、HTML、CSS、JavaScriptを使用して美しいウェブサイトを作成することが得意です。GitHubでは、これまでに取り組んできたプロジェクトやコードを公開していますので、ぜひチェックしてください。</p>
         <p>もし私の仕事に興味があれば、下記のソーシャルリンクからお気軽に連絡してください！</p>
