--- a/syoukai/index.html
+++ b/syoukai/index.html
@@ -51,7 +51,7 @@
     <div class="container">
         <h1>自己紹介</h1>
         <!-- 画像を表示 -->
-        <img src="EwWE7NTUcAMdphZ.jpg" alt="サンプル画像" width="400">
+        <img src="syoukai/EwWE7NTUcAMdphZ.jpg" alt="サンプル画像" width="400">
         <p>こんにちは！私の名前はcoffee0814です。ウェブ開発とデザインが大好きで、趣味はプログラミング、読書、そして旅行です。</p>
         <p>現在は、フロントエンド開発に力を入れており、HTML、CSS、JavaScriptを使用して美しいウェブサイトを作成することが得意です。GitHubでは、これまでに取り組んできたプロジェクトやコードを公開していますので、ぜひチェックしてください。</p>
         <p>もし私の仕事に興味があれば、下記のソーシャルリンクからお気軽に連絡してください！</p>
