--- a/syoukai/index.html
+++ b/syoukai/index.html
@@ -12,13 +12,12 @@
             margin: 0;
             padding: 0;
         }
-        .container {
-            max-width: 900px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        .circle-image {
+            width: 200px;           /* 画像の幅 */
+            height: 200px;          /* 画像の高さ */
+            border-radius: 50%;     /* 丸くする */
+            object-fit: cover;      /* 画像が枠に収まるように調整 */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 影を追加して立体感を出す */
         }
         h1 {
             color: #333;
